[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools_scm]
write_to = "_version.py"

[project]
name = "pngx"
version = "0.0.1"
authors = [
  { name="martin f. krafft", email="pngx@pobox.madduck.net" },
]
description = "A tool to interact with Paperless NGX"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pypaperless",
  "click_extra",
  "aiofile",
  "platformdirs"
]

[project.optional-dependencies]
dev= [
  "ipdb",
  "mypy",
  "ruff",
  "pre-commit"
]

[project.scripts]
pngx = "pngx.cli:main"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["B", "C", "E", "F", "I", "W", "B9"]

[tool.mypy]
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["ipdb"]
ignore_missing_imports = true
